@@ -8,17 +8,15 @@ import me.kumo.ui.utils.Formatters;
 import javax.swing.Timer;
 import javax.swing.*;
 import java.awt.*;
-import java.awt.event.ActionEvent;
-import java.awt.event.ActionListener;
 import java.awt.event.ComponentEvent;
 import java.awt.event.ComponentListener;
 import java.util.List;
 import java.util.*;
 
-public class Gallery extends OverlayScrollPane implements ComponentListener, Refreshable<List<Illustration>>, ActionListener {
+public class Gallery extends OverlayScrollPane implements ComponentListener, Refreshable<List<Illustration>> {
     private final JPanel grid;
     private final Stack<GalleryItem> usedPool = new Stack<>();
-    private final HashMap<Long, GalleryItem> freePool = new HashMap<>();
+    private final HashMap<Long, GalleryItem> holderMap = new HashMap<>();
     private int colCount;
     private SwingWorker<Object, Object> worker;
     private int layoutItemCount;
@@ -32,20 +30,19 @@ public class Gallery extends OverlayScrollPane implements ComponentListener, Ref
         super(null, JScrollPane.VERTICAL_SCROLLBAR_AS_NEEDED, JScrollPane.HORIZONTAL_SCROLLBAR_NEVER);
         this.colCount = colCount;
         this.grid = new JPanel();
+        new Timer(16, e -> repaint()).start();
         getScrollPane().setViewportView(this.grid);
         getVerticalScrollBar().setUnitIncrement(32);
-
-        Timer timer = new Timer(16, this);
         setPreferredSize(new Dimension(720, 480));
         getScrollPane().getViewport().addChangeListener(e -> updateShownStatus());
         addComponentListener(this);
-        timer.start();
     }
 
     private void updateShownStatus() {
         Rectangle visibleRect = getScrollPane().getViewport().getViewRect();
         Arrays.stream(grid.getComponents()).filter(Objects::nonNull).forEach(component -> ((GalleryItem) component).setShown(component.getBounds().intersects(visibleRect)));
     }
+
 
     public void refresh(List<Illustration> illustrations) {
         if (worker != null) worker.cancel(true);
@@ -56,23 +53,23 @@ public class Gallery extends OverlayScrollPane implements ComponentListener, Ref
                 grid.removeAll();
                 updateLayout(illustrations.size());
                 grid.revalidate();
-                for (GalleryItem galleryItem : usedPool) {
-                    galleryItem.setVisible(false);
-                    freePool.putIfAbsent(galleryItem.getIllustration().getId(), galleryItem);
-                }
+                for (GalleryItem galleryItem : usedPool) galleryItem.setVisible(false);
                 usedPool.clear();
                 for (Illustration illustration : illustrations) {
-                    GalleryItem holder = freePool.remove(illustration.getId());
-                    if (holder == null) holder = new GalleryItem();
+                    GalleryItem holder = holderMap.computeIfAbsent(illustration.getId(), i -> new GalleryItem());
                     holder.refresh(illustration);
-                    usedPool.push(holder);
-                    RepaintManager.currentManager(Gallery.this).markCompletelyClean(grid);
-                    RepaintManager.currentManager(grid).markCompletelyClean(holder);
                     holder.setVisible(true);
+                    usedPool.push(holder);
+                    RepaintManager.currentManager(grid).markCompletelyClean(holder);
                     grid.add(holder);
+                    if (isCancelled()) return null;
+                    try {
+                        Thread.sleep(0);
+                    } catch (InterruptedException ignored) {
+                        return null;
+                    }
                 }
                 grid.revalidate();
-                usedPool.forEach(JComponent::revalidate);
                 SwingUtilities.invokeLater(() -> {
                     updateShownStatus();
                     repaint();
@@ -80,22 +77,24 @@ public class Gallery extends OverlayScrollPane implements ComponentListener, Ref
                 return null;
             }
         };
-        worker.execute();
+        SwingUtilities.invokeLater(() -> worker.execute());
     }
+
 
     @Override
     public void paint(Graphics g) {
+        if (System.nanoTime() - this.last_frame_nanos < 16e-3) return;
         super.paint(g);
-
         drawDebug(g);
     }
 
     private void drawDebug(Graphics g) {
+        int lines = 6;
         int LINE_HEIGHT = g.getFontMetrics().getHeight();
-        int x = getWidth() - 200, y = getHeight() - LINE_HEIGHT * 5;
+        int x = getWidth() - 200, y = getHeight() - LINE_HEIGHT * lines;
 
         g.setColor(new Color(0xaa000000, true));
-        g.fillRect(x, y, 200, LINE_HEIGHT * 5);
+        g.fillRect(x, y, 200, LINE_HEIGHT * lines);
 
         g.setFont(new Font(Font.MONOSPACED, Font.PLAIN, 10));
         g.setColor(Color.WHITE);
@@ -103,10 +102,20 @@ public class Gallery extends OverlayScrollPane implements ComponentListener, Ref
         y -= LINE_HEIGHT / 2;
         x += 4;
         y += 4;
+        int barPad = g.getFontMetrics().stringWidth("MEM:  ");
+        g.setXORMode(Color.BLACK);
         g.drawString(String.format("OS:   %s (%s)", System.getProperty("os.name"), System.getProperty("os.version")), x, y += LINE_HEIGHT);
         g.drawString(String.format("ARCH: %s (%d cores)", System.getProperty("os.arch"), runtime.availableProcessors()), x, y += LINE_HEIGHT);
-        g.drawString(String.format("MEM:  %8s / %s", Formatters.formatBytes(runtime.totalMemory() - runtime.freeMemory()), Formatters.formatBytes(runtime.totalMemory())), x, y += LINE_HEIGHT);
-        g.drawString(String.format("FPS:  %5.1f", 1e9d / -(this.last_frame_nanos - (this.last_frame_nanos = System.nanoTime()))), x, y += LINE_HEIGHT);
+
+        long usedMem = runtime.totalMemory() - runtime.freeMemory();
+
+        g.fillRect(x + barPad, y + LINE_HEIGHT / 4, (int) ((200 - barPad) * runtime.totalMemory() / runtime.maxMemory()), LINE_HEIGHT);
+        g.setColor(Color.RED);
+        g.fillRect(x + barPad, y + LINE_HEIGHT / 4, (int) ((200 - barPad) * usedMem / runtime.maxMemory()), LINE_HEIGHT);
+        g.setColor(Color.WHITE);
+        g.drawString("MEM:  %8s/%s/%s".formatted(Formatters.formatBytes(usedMem), Formatters.formatBytes(runtime.totalMemory()), Formatters.formatBytes(runtime.maxMemory())), x, y += LINE_HEIGHT);
+        g.drawString("FPS:  %5.1f".formatted(1e9d / -(this.last_frame_nanos - (this.last_frame_nanos = System.nanoTime()))), x, y += LINE_HEIGHT);
+        g.drawString("Cnt:  %d".formatted(grid.getComponentCount()), x, y += LINE_HEIGHT);
         String s = getClass().getPackage().getImplementationVersion();
         g.drawString(String.format("Ver:  %s", s == null ? "dev" : s), x, y += LINE_HEIGHT);
     }
@@ -137,13 +146,5 @@ public class Gallery extends OverlayScrollPane implements ComponentListener, Ref
 
     public void tapGallery() {
         usedPool.forEach(GalleryItem::updateImage);
-    }
-
-    @Override
-    public void actionPerformed(ActionEvent e) {
-        try {
-            repaint();
-        } catch (ConcurrentModificationException | NullPointerException ignored) {
-        }
     }
 }
